# short-vis-path

./: Cargo.toml
src/: args.rs  lib.rs
tests/: Cargo.toml  entry.rs  tests.rs  usage.rs
tests/add/: single_ident.rs
tests/err_bad_diagnostic/: Cargo.toml
tests/err_bad_diagnostic/.cargo/: config.toml
tests/err_bad_diagnostic/src/: main.rs  ptrace.rs
tests/err_bad_diagnostic/src/process/posix_thread/: ptrace.rs
tests/err_decl_macro_absolute_path/: Cargo.toml  cargo_expand.rs
tests/err_decl_macro_absolute_path/src/: main.rs
tests/err_single_ident/: Cargo.toml  cargo_expand.rs
tests/err_single_ident/src/: main.rs
tests/ok_decl_macro_2/: Cargo.toml  cargo_expand.rs
tests/ok_decl_macro_2/src/: main.rs
tests/ok_macro_export/: Cargo.toml
tests/ok_macro_export/src/: main.rs
tests/ok_single_ident/: Cargo.toml  cargo_expand.rs  stderr.txt  stdout.txt
tests/ok_single_ident/src/: main.rs  multi.rs  nested.rs  procfs.rs
tests/ok_single_ident/src/fs/: mod.rs  nested.rs  procfs.rs
tests/ok_single_ident/src/fs/tmpfs/: fs.rs
tests/ok_single_ident/src/fs2/procfs/: mod.rs
tests/ok_single_ident/src/mod_rs/procfs/: mod.rs  multi.rs
tests/ok_single_ident/src/override_/: procfs.rs
tests/usage/: Cargo.toml  cargo_expand.rs  stderr.txt
tests/usage/src/: procfs.rs
usage/: Cargo.toml  stderr.txt
